--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
    <meta charset="UTF-8">
    <title>HexGrid</title>
+   <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <canvas id="canvas" width="8000" height="5000">
+    <canvas id="canvas" width="1" height="1">
     <script src="main.js"></script>
   </body>
 </html>
