Add randomize button.
- Add button to randomize the starting conditions and rule.

- Console now prints command to make current pattern.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <button onclick="randomize()">Randomize!</button>
     <canvas id="canvas" width="1" height="1">
     <script src="main.js"></script>
   </body>
